fixed broken CSS variables that were erroring styled components

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,8 +5,6 @@
 :root {
   /* Brand colors */
   --body-bg: rgb(252, 254, 247);
-  /*--body-text: #fff;
-  --component-text-color: #fff; */
   --component-bg: rgb(252, 254, 247);
   --main-navigation-color: #450d0d;
 
@@ -18,16 +16,12 @@
   /* Typography */
   --font-family-sans-serif: 'Space Mono';
   --font-size-base: 16px;
-  /* --text-color: var(--brand-primary--inverted); */
   --text-color: rgb(88, 88, 88);
 
   --header-height: 3.3rem;
 
-
-  --default-button-color: var(--brand-primary);
-
-  --default-button-color: rgb(104, 173, 13);
-  --default-button-color--inverted: var(--white);
+  --default-button-color: #68ad0d;
+  --default-button-color--inverted: #ffffff;
   --default-button-color--hover: #87CC2F;
   --default-button-color--active: #87CC2F;
 }
